[package]
name = "amethyst-aabb"
version = "0.1.0"
authors = ["Kaneyuki Hiromasa <matsugen2511@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan", "sdl_controller", "no-slow-safety-checks"] }
ncollide2d="0.21.0"

log="0.4.8"

[features]
default=["debug"]
debug=[]